# azure-sub-migrator

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  startup.sh  web.config
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml
appservice-logs/deployments/: active
appservice-logs/deployments/12cd15af-02a5-4feb-b539-4886568a7c9f/: status.xml
appservice-logs/deployments/385be5ba-8adc-4ef0-aea8-20d5f7edd285/: status.xml
appservice-logs/deployments/679ea861-e686-4c94-9a7c-5638cda13f51/: status.xml
appservice-logs/deployments/7f94f070-7b66-4454-ab43-84f5c5b68f5f/: status.xml
appservice-logs/deployments/9fbe5886-b478-40ac-a489-afad51dcdc59/: status.xml
appservice-logs/deployments/c856d594-0ff9-4742-97d9-07147974ddc2/: status.xml
azure_sub_migrator/: __init__.py  auth.py  bundle.py  cli.py  config.py  constants.py  cross_sub.py  exceptions.py  iac_generator.py  logger.py  migration_plan.py  post_transfer.py  pre_transfer.py  principal_map.py  rbac.py  readiness.py  report_export.py  reporter.py  retry.py  runbook.py  scanner.py  target_tenant.py  transfer.py
samples/: sample_config.yaml
scripts/: audit-gaps.ps1  fix-gaps.ps1  migrate-app-service.ps1
tenova/: __init__.py  auth.py  bundle.py  cli.py  config.py  constants.py  cross_sub.py  exceptions.py  iac_generator.py  logger.py  migration_plan.py  policy.py  post_transfer.py  pre_transfer.py  principal_map.py  rbac.py  readiness.py  report_export.py  reporter.py  retry.py  runbook.py  scanner.py  target_tenant.py  transfer.py
tests/: conftest.py  test_auth.py  test_bundle.py  test_cli.py  test_cross_sub.py  test_policy.py  test_post_transfer.py  test_pre_transfer.py  test_principal_map.py  test_rbac.py  test_readiness.py  test_report_export.py  test_retry.py  test_runbook.py  test_scanner.py  test_target_tenant.py  test_web.py
web/: app.py  audit.py  auth_web.py  routes.py  tasks.py  wsgi.py
web/static/: style.css
web/templates/: base.html  checklist.html  connect_target.html  consent_success.html  dashboard.html  error.html  login.html  policy_export.html  post_transfer.html  pre_transfer.html  principal_map.html  rbac_export.html  readiness.html  scan_results.html  upload_bundle.html  workflow.html
(+76 files in other folders)
