[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tenova"
version = "0.1.0"
description = "Tenova – Azure Tenant-to-Tenant Migration Tool"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "LearnAzureWithMo", email = "noreply@example.com" },
]
keywords = ["azure", "migration", "tenant", "entra", "azure-ad"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click~=8.3",
    "azure-identity~=1.25",
    "azure-mgmt-resource>=23.0,<24.0",
    "azure-mgmt-resourcegraph~=8.0",
    "azure-mgmt-authorization~=4.0",
    "azure-mgmt-subscription~=3.1",
    "azure-mgmt-keyvault~=13.0",
    "azure-mgmt-msi~=7.1",
    "azure-mgmt-sql~=3.0",
    "azure-mgmt-web~=10.1",
    "azure-mgmt-network~=30.2",
    "azure-mgmt-privatedns~=1.2",
    "azure-mgmt-monitor~=7.0",
    "azure-mgmt-storage~=24.0",
    "requests~=2.32",
    "rich~=14.3",
    "pyyaml~=6.0",
    "flask~=3.1",
    "flask-wtf~=1.2",
    "flask-limiter~=4.1",
    "flask-session~=0.8",
    "msal~=1.35",
    "cryptography~=46.0",
    "gunicorn~=25.1",
    "fpdf2~=2.8",
    "openpyxl~=3.1",
    "pillow~=12.1",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pytest-mock~=3.15",
    "ruff~=0.15",
    "mypy~=1.19",
]

[project.scripts]
tenova = "tenova.cli:cli"

[project.urls]
Homepage = "https://github.com/microsoft/tenova"
Issues = "https://github.com/microsoft/tenova/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tenova/constants.py" = ["E501"]
"tenova/runbook.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
